[metadata]
name = pyopenrec
version = attr: pyopenrec.__version__
url = https://github.com/vinyl-umbrella/pyopenrec
author = vinyl-umbrella
license = MIT
license_file = LICENSE
description = OPENREC.tv API wrapper for Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = openrec, openrectv, api
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    requests>=2.26
    websocket-client>=1.2.3
python_requires = >=3.7
zip_safe = false

[options.packages.find]
exclude = tests

[flake8]
extend-ignore=E501
exclude=__init__.py
max-line-length=120
