[metadata]
name = pyopenrec
version = attr: pyopenrec.__version__
url = https://github.com/vinyl-umbrella/pyopenrec
author = vinyl-umbrella
license = MIT
license_file = LICENSE
description = OPENREC.tv API wrapper for Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = openrec, openrectv, api
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    requests>=2.30.0
    websocket-client>=1.6.0
python_requires = >=3.9
zip_safe = false

[options.packages.find]
exclude = tests
